--- a/style.css
+++ b/style.css
@@ -201,8 +201,7 @@ footer {
    .home-text {
     margin-left: 20px;
     justify-content: center;
-    align-content: center;
-    padding-top: 20px;
+    align-self: center;
    }
 
    .image {
